<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item_title_text_view"
                    android:layout_width="match_parent"
                    android:text="@string/title_joke"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_description_text_view"
                    android:layout_width="match_parent"
                    android:text="@string/description"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"/>

                <TextView
                    android:id="@+id/item_email_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/email"
                    android:textStyle="italic"
                    android:paddingTop="20sp"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>